# ComputePipeLine

./: CMakeLists.txt  README.md
cmake/: EnableDoxygen.cmake  EnableTesting.cmake  EnableVersioning.cmake  version.h.in
doc/: Doxyfile
src/: CMakeLists.txt  main.cpp
src/Actions/: CMakeLists.txt
src/Actions/include/: Actions.h  Actions_Factory.h  Decompress_Actions.h  Image_Actions.h  JSON_Actions.h
src/Actions/src/: Actions.cpp  Actions_Factory.cpp  Decompress_Actions.cpp  Image_Actions.cpp  JSON_Actions.cpp
src/ComputePipeline/: CMakeLists.txt
src/ComputePipeline/include/: ComputePipeline.h
src/ComputePipeline/src/: ComputePipeline.cpp
src/Loader/: CMakeLists.txt
src/Loader/include/: loader.h
src/Loader/src/: loader.cpp
src/Loader/tests/: CMakeLists.txt  test_loader.cpp
